tests/ui/double_comparison.stderr
error: This binary expression can be simplified
 --> $DIR/double_comparison.rs:4:8
  |
4 |     if x == y || x < y {
  |        ^^^^^^^^^^^^^^^ help: try: `x <= y`
  |
  = note: #[deny(double_comparisons)] on by default

error: This binary expression can be simplified
 --> $DIR/double_comparison.rs:7:8
  |
7 |     if x < y || x == y {
  |        ^^^^^^^^^^^^^^^ help: try: `x <= y`

error: This binary expression can be simplified
  --> $DIR/double_comparison.rs:10:8
   |
10 |     if x == y || x > y {
   |        ^^^^^^^^^^^^^^^ help: try: `x >= y`

error: This binary expression can be simplified
  --> $DIR/double_comparison.rs:13:8
   |
13 |     if x > y || x == y {
   |        ^^^^^^^^^^^^^^^ help: try: `x >= y`

error: This binary expression can be simplified
  --> $DIR/double_comparison.rs:16:8
   |
16 |     if x < y || x > y {
   |        ^^^^^^^^^^^^^^ help: try: `x != y`

error: This binary expression can be simplified
  --> $DIR/double_comparison.rs:19:8
   |
19 |     if x > y || x < y {
   |        ^^^^^^^^^^^^^^ help: try: `x != y`

error: This binary expression can be simplified
  --> $DIR/double_comparison.rs:22:8
   |
22 |     if x <= y && x >= y {
   |        ^^^^^^^^^^^^^^^^ help: try: `x == y`

error: This binary expression can be simplified
  --> $DIR/double_comparison.rs:25:8
   |
25 |     if x >= y && x <= y {
   |        ^^^^^^^^^^^^^^^^ help: try: `x == y`

error: aborting due to 8 previous errors

